--- a/requirments/srcs/wordpress/Dockerfile
+++ b/requirments/srcs/wordpress/Dockerfile
@@ -2,8 +2,14 @@ FROM debian:bullseye
 
 RUN apt-get update -y && apt-get upgrade -y
 
-RUN apt-get install wordpress
+RUN apt-get install -y php-fpm
 
-RUN apt-get install php-fpm
+RUN apt install curl -y  php-mysql -y
 
-RUN mkdir /etc/nginx/tls
+COPY tools/configure_script.sh /
+
+COPY tools/wp-config.php /
+
+CMD [ "./conifgure_script.sh" ]
+
+
