docker compose yml

--- a/requirments/.env
+++ b/requirments/.env
@@ -1,2 +1,8 @@
+
+# DATABASE ENV
 $DB_NAME="mydb42"
-$domain_name="test.com"
+$DB_USER="ciusca"
+$DB_PWD="superstrong"
+$DB_HOST="host"
+
+$DOMAIN_NAME="test.com"
