docker compose yml finished

--- a/srcs/requirments/mariadb/Dockerfile
+++ b/srcs/requirments/mariadb/Dockerfile
@@ -8,4 +8,6 @@ COPY /tools/50-server.cnf  /etc/mysql/mariadb.conf.d/50-server.cnf
 
 COPY tools/create_database.sh /
 
-CMD [ "./create_stabase.sh" ]
+RUN chmod +x ./create_database.sh
+
+CMD [ "./create_database.sh" ]
