i don'w know what i am doing

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,6 +3,15 @@
 $DB_NAME="mydb42"
 $DB_USER="ciusca"
 $DB_PWD="superstrong"
-$DB_HOST="host"
-
+$DB_HOST="mariadb"
+$MYSQL_ROOT_PASSWORD="root"
 $DOMAIN_NAME="test.com"
+
+$WP_TITLE=ciusca-title
+$WP_ADMIN_USR=admin
+$WP_ADMIN_WP=secure
+$WP_ADMIN_EMAIL=admin@mail.com
+
+$WP_USR=ciusca
+$WP_EMAIL=ciusca@mail.com
+$WP_PWD=iuscacri09
