--- a/srcs/requirments/wordpress/Dockerfile
+++ b/srcs/requirments/wordpress/Dockerfile
@@ -2,14 +2,16 @@ FROM debian:bullseye
 
 RUN apt-get update -y && apt-get upgrade -y
 
-RUN apt-get install -y php8.3-fpm
+RUN apt install php-fpm -y
 
 RUN apt install curl -y  php-mysql -y
 
 COPY tools/configure_script.sh /
 
+RUN chmod +x ./configure_script.sh
+
 COPY tools/wp-config.php /
 
-CMD [ "./conifgure_script.sh" ]
+CMD [ "./configure_script.sh" ]
 
 
