wordpress still can't connect to db

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,17 +1,17 @@
 
 # DATABASE ENV
-$DB_NAME="mydb42"
-$DB_USER="ciusca"
-$DB_PWD="superstrong"
-$DB_HOST="mariadb"
-$MYSQL_ROOT_PASSWORD="root"
-$DOMAIN_NAME="test.com"
+DB_NAME=mydb42
+DB_USER=ciusca
+DB_PWD=superstrong
+DB_HOST=mariadb
+DB_ROOT_PASSWORD=root
+DOMAIN_NAME=test.com
 
-$WP_TITLE=ciusca-title
-$WP_ADMIN_USR=admin
-$WP_ADMIN_WP=secure
-$WP_ADMIN_EMAIL=admin@mail.com
+WP_TITLE=ciusca-title
+WP_ADMIN_USER=admin
+WP_ADMIN_PWD=secure
+WP_ADMIN_EMAIL=admin@mail.com
 
-$WP_USR=ciusca
-$WP_EMAIL=ciusca@mail.com
-$WP_PWD=iuscacri09
+WP_USER=ciusca
+WP_USER_EMAIL=ciusca@mail.com
+WP_USER_PWD=secure
