--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.3'
-
 volumes:
   wordpress:
     name: wordpress-volume
@@ -17,8 +15,9 @@ volumes:
       type: none
 
 networks:
-  inception:
-    name: inception-net
+  inception-net:
+    name: inception-bridge
+    driver: bridge
 
 services:
 
@@ -28,31 +27,40 @@ services:
     image: nginx-image
     ports:
       - "443:443"
-    depends_on:
-      - wordpress
     volumes:
       - wordpress:/var/www/html
     networks:
-      - inception  # ✅ FIXED TYPO (was 'incpetion-net')
+      - inception-net
     env_file:
       - .env
     restart: always
 
   wordpress:
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     container_name: wordpress
     build: ./requirments/wordpress
     image: wordpress-image
     depends_on:
-      - mariadb
+      mariadb:
+        condition: service_healthy
     volumes:
       - wordpress:/var/www/html
     env_file:
       - .env
     networks:
-      - inception
+      - inception-net
     restart: always
 
   mariadb:
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     container_name: mariadb
     build: ./requirments/mariadb
     image: mariadb-image
@@ -61,5 +69,5 @@ services:
     env_file:
       - .env
     networks:
-      - inception
+      - inception-net
     restart: always
