finally seeing wodpress

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
 
 # DATABASE ENV
 DB_NAME=mydb42
-DB_USER=ciusca
-DB_PWD=superstrong
+DB_USER=cristian
+DB_PWD=superstrongma
 DB_HOST=mariadb
 DB_ROOT_PASSWORD=root
 DOMAIN_NAME=test.com
