--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    
     container_name: wordpress
     build: ./requirments/wordpress
     image: wordpress-image
@@ -53,6 +54,10 @@ services:
       - .env
     networks:
       - inception-net
+    ports:
+      - "9000:9000"
+    expose:
+      - "9000"
     restart: always
 
   mariadb:
