--- a/srcs/requirments/nginx/tools/nginx.conf
+++ b/srcs/requirments/nginx/tools/nginx.conf
@@ -4,25 +4,16 @@ http {
     upstream wordpress {
         server wordpress:9000;
     }
-
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name nromito.42.fr;
-
-        return 301 https://nromito.42.fr;
-    }
-
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
-        server_name nromito.42.fr;
+        server_name ciusca.42.fr;
 
         ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
         ssl_protocols TLSv1.3;
 
-        index index.php;
+        index index.php index.html index.htm;
         root /var/www/html;
 
         location / {
