--- a/srcs/requirments/mariadb/Dockerfile
+++ b/srcs/requirments/mariadb/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bullseye
 
 RUN apt-get update -y && apt-get install mariadb-server -y
 
-COPY ./tools/server.cnf /etc/my.cnf.d/mariadb-server.cnf
+COPY ./tools/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 COPY ./tools/create_database.sh /
 
