--- a/srcs/.env
+++ b/srcs/.env
@@ -5,12 +5,12 @@ DB_USER=cristian
 DB_PWD=superstrongma
 DB_HOST=mariadb
 DB_ROOT_PASSWORD=root
-DOMAIN_NAME=test.com
+DOMAIN_NAME=ciusca.42.fr
 
 WP_TITLE=ciusca-title
-WP_ADMIN_USER=admin
+WP_ADMIN_USER=goku
 WP_ADMIN_PWD=secure
-WP_ADMIN_EMAIL=admin@mail.com
+WP_ADMIN_EMAIL=goku@mail.com
 
 WP_USER=ciusca
 WP_USER_EMAIL=ciusca@mail.com
