--- a/srcs/requirments/nginx/tools/nginx.conf
+++ b/srcs/requirments/nginx/tools/nginx.conf
@@ -29,7 +29,7 @@ http {
 
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
-            fastcgi_pass wordpress;  # ✅ use upstream name, port defined there!
+            fastcgi_pass wordpress;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
